--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: fjlutter
+    sdk: flutter
   flutter_modular: ^4.5.0
   mobx: ^2.0.6+1   
   flutter_mobx: ^2.0.3+2  
@@ -41,15 +41,19 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  
   firebase_core: ^1.13.1
   firebase_remote_config: ^2.0.2
   firebase_auth: ^3.3.9 
+  firebase_messaging: ^11.2.11
+  
   flutter_dotenv: ^5.0.2   
   logger: ^1.1.0
   shared_preferences: ^2.0.13  
   flutter_secure_storage: ^5.0.2
   validatorless: ^1.2.1
-
+  google_sign_in: ^5.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
